# A-Class-Jinja

./: pyproject.toml
app/: main.py  models.py
app/static/: drag_and_drop.js  style.css
app/templates/: base.html  index.html
